--- a/01_drum_kit.html
+++ b/01_drum_kit.html
@@ -57,28 +57,7 @@
   <audio data-key="75" src="audio/01 - JavaScript Drum Kit_sounds_tom.wav"></audio>
   <audio data-key="76" src="audio/01 - JavaScript Drum Kit_sounds_tink.wav"></audio>
 
-<script>
- function playSound(event) {
-    const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
-    const key = document.querySelector(`.key[data-key="${event.keyCode}"]`);
-    if (!audio) return; 
-    audio.currentTime = 0;
-    audio.play();
-    key.classList.add('playing');
-  }
 
-  function removeTransition() {
-    if (event.propertyName !== 'transform') return;
-    this.classList.remove('playing')
-
-  }
-
-    const keys = document.querySelectorAll('.key');
-    keys.forEach(key => key.addEventListener('transitionend', removeTransition))
-    window.addEventListener('keydown', playSound);
-
-</script>
-
-
+  <script src="js/script.js"></script>
 </body>
 </html>
